--- a/debian/enesim/debian/control
+++ b/debian/enesim/debian/control
@@ -1,7 +1,7 @@
 Source: enesim
 Section: libs
 Priority: optional
-Build-Depends: debhelper (>= 6), cdbs, pkg-config, libeina-dev (>= 1.7.8)
+Build-Depends: debhelper (>= 6), cdbs, pkg-config, libeina-dev (>= 1.7.8),
   libglew-dev, libpng12-dev, libjpeg-dev, libfreetype6-dev, libfontconfig1-dev
 Build-Depends-Indep: doxygen
 Maintainer: Jorge Zapata <jorgeluis.zapata@gmail.com>
