--- a/debian/etch/debian/control
+++ b/debian/etch/debian/control
@@ -1,9 +1,7 @@
 Source: etch
 Section: libs
 Priority: optional
-Build-Depends: debhelper (>= 6), cdbs, pkg-config, libeina-dev (>= 1.0.0),
-  libglew-dev, libpng12-dev, libjpeg-dev, libfreetype6-dev,
-  libfontconfig1-dev
+Build-Depends: debhelper (>= 6), cdbs, pkg-config, libeina-dev (>= 1.0.0)
 Build-Depends-Indep: doxygen
 Maintainer: Jorge Zapata <jorgeluis.zapata@gmail.com>
 Standards-Version: 3.9.1
@@ -20,8 +18,7 @@ Section: libdevel
 Architecture: any
 Pre-Depends: multiarch-support
 Depends: ${misc:Depends}, libetch0 (= ${binary:Version}), pkg-config,
-  libeina-dev (>= 1.0.0), libglew-dev, libpng12-dev, libjpeg-dev,
-  libfreetype6-dev, libfontconfig1-dev,
+  libeina-dev (>= 1.0.0)
 Recommends: libetch-doc
 Description: Timeline based animation library
  This package contains headers and static libraries for development with
