--- a/drone.io/etch.conf
+++ b/drone.io/etch.conf
@@ -1,3 +1,3 @@
 REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/eina/files/eina-debs.tar.gz"
-BUILD_DEPENDENCIES="libeina-dev"
+BUILD_DEPENDENCIES="libeina-dev doxygen"
 
