Add libefl-dev now that we have pushed our changes

--- a/drone.io/enesim.conf
+++ b/drone.io/enesim.conf
@@ -1,2 +1,2 @@
-REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/eina/files/eina-debs.tar.gz"
-BUILD_DEPENDENCIES="libeina-dev libglew-dev libpng12-dev libjpeg-dev libfreetype6-dev libfontconfig1-dev doxygen"
+EXTERNAL_PPAS="ppa:hannes-janetzek/enlightenment-svn"
+BUILD_DEPENDENCIES="libefl-dev libglew-dev libpng12-dev libjpeg-dev libfreetype6-dev libfontconfig1-dev doxygen"
