--- a/drone.io/egueb.conf
+++ b/drone.io/egueb.conf
@@ -1,3 +1,5 @@
-REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/eina/files/eina-debs.tar.gz https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz"
-BUILD_DEPENDENCIES="libeina-dev libenesim-dev doxygen"
+REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/eina/files/eina-debs.tar.gz \
+https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz \
+https://drone.io/github.com/turran/etch/files/etch-debs.tar.gz"
+BUILD_DEPENDENCIES="libeina-dev libenesim-dev libetch-dev doxygen libfl-dev bison"
 
