--- a/drone.io/egueb.conf
+++ b/drone.io/egueb.conf
@@ -1,5 +1,5 @@
-REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/eina/files/eina-debs.tar.gz \
-https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz \
+EXTERNAL_PPAS="ppa:hannes-janetzek/enlightenment-svn"
+REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz \
 https://drone.io/github.com/turran/etch/files/etch-debs.tar.gz"
-BUILD_DEPENDENCIES="libeina-dev libenesim-dev libetch-dev doxygen libfl-dev bison"
+BUILD_DEPENDENCIES="libefl-dev libenesim-dev libetch-dev doxygen libfl-dev bison"
 
