--- a/drone.io/egueb.conf
+++ b/drone.io/egueb.conf
@@ -1,5 +1,5 @@
-EXTERNAL_PPAS="ppa:hannes-janetzek/enlightenment-svn"
+EXTERNAL_PPAS="ppa:vase/ppa"
 REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz \
 https://drone.io/github.com/turran/etch/files/etch-debs.tar.gz"
-BUILD_DEPENDENCIES="libefl-dev libenesim-dev libetch-dev doxygen libfl-dev bison flex"
+BUILD_DEPENDENCIES="libefl-dev libenesim-dev libeender-dev doxygen libfl-dev bison flex"
 
