Update the dependencies

--- a/drone.io/ender.conf
+++ b/drone.io/ender.conf
@@ -1,3 +1,4 @@
 EXTERNAL_PPAS="ppa:vase/ppa"
-BUILD_DEPENDENCIES="libefl-dev doxygen"
+REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz
+BUILD_DEPENDENCIES="libefl-dev doxygen libffi-dev libenesim-dev"
 
