--- a/drone.io/ender.conf
+++ b/drone.io/ender.conf
@@ -1,4 +1,4 @@
 EXTERNAL_PPAS="ppa:vase/ppa"
-REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz
+REMOTE_DEPENDENCIES="https://drone.io/github.com/turran/enesim/files/enesim-debs.tar.gz"
 BUILD_DEPENDENCIES="libefl-dev doxygen libffi-dev libenesim-dev"
 
